[project]
name = "explosion"
version = "0.1.0"
description = "Explosion."
readme = "README.md"
authors = [
    { name = "hammerill", email = "kyrylo@hammerill.com" }
]
requires-python = ">=3.12"
dependencies = [
    "ntplib>=0.4.0",
    "pillow>=12.1.1",
]

[project.scripts]
explosion = "explosion.cli:main"

[build-system]
requires = ["uv_build>=0.9.13,<0.10.0"]
build-backend = "uv_build"
