[project]
name = "explode-the-parrot"
version = "1.1.0"
description = "Make that parrot explode."
readme = "README.md"
authors = [
    { name = "hammerill", email = "kyrylo@hammerill.com" }
]
requires-python = ">=3.12"
dependencies = [
    "ntplib>=0.4.0",
    "pillow>=12.1.1",
]

[project.scripts]
explosion = "explosion.cli:main"
explode-the-parrot = "explosion.cli:main"

[build-system]
requires = ["uv_build>=0.10.12,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "explosion"
